# wasm-console-example

./: Cargo.toml  README.md  index.js  package-lock.json  package.json  webpack.config.js
.github/: dependabot.yml
.github/workflows/: netlify.yml
src/: lib.rs
