[package]
name = "wasm_console_example"
version = "0.1.0"
authors = ["Ryo Ota <nwtgck@nwtgck.org>"]
edition = "2018"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.67"
wasm-console = { git = "https://github.com/nwtgck/wasm-console", rev = "af75ff93899cf866596b7ec907a415439bf6acf8" }
