[package]
name = "wasm_console_example"
version = "0.1.0"
authors = ["Ryo Ota <nwtgck@nwtgck.org>"]
edition = "2018"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.67"
wasm-console = { git = "https://github.com/nwtgck/wasm-console", rev = "9ac5a803d11cf0c907d64db9868113074bc363ee" }
