[package]
name = "wasm_console_example"
version = "0.1.0"
authors = ["Ryo Ota <nwtgck@nwtgck.org>"]
edition = "2018"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.71"
wasm-console = { git = "https://github.com/nwtgck/wasm-console", rev = "4cc703a48c02039beb52a9a2a613f6856aec561d" }
